[KRecentFilesAction] Fix broken recent files list

Modifying the list of recent files in the `urlSelected` signal handler (as it happens in Okular: [`Shell::openUrl`](https://invent.kde.org/graphics/okular/-/blob/master/shell/shell.cpp#L332) > [`KRecentFilesAction::addUrl`](https://invent.kde.org/frameworks/kconfigwidgets/-/blob/master/src/krecentfilesaction.cpp#L177) > [`KRecentFilesAction::removeUrl`](https://invent.kde.org/frameworks/kconfigwidgets/-/blob/master/src/krecentfilesaction.cpp#L232) > [`KRecentFilesActionPrivate::removeAction`](https://invent.kde.org/frameworks/kconfigwidgets/-/blob/master/src/krecentfilesaction.cpp#L103)) can cause the iterator used when emitting that signal to become invalid.

BUG: 461448